--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -21,8 +21,8 @@
         <p *ngIf="error" class="text-danger">{{ error }}</p>
       </div>
 
-      <div >
-        <a routerLink="/register" class="text-decoration-none">Don't have an account? Register</a>
+      <div class="register-text">
+        <a routerLink="/register" >Don't have an account? Register</a>
       </div>
     </div>
   </div>
