--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="register-text">
-        <a routerLink="/register" >Don't have an account? Register</a>
+        <a routerLink="/register" class="text-decoration-none">Don't have an account? Register</a>
       </div>
     </div>
   </div>
