--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -6,8 +6,7 @@
     <nav>
       <ul>
         <li><a routerLink="/dashboard" routerLinkActive="active"><span class="material-icons">dashboard</span> Dashboard</a></li>
-        <li><a routerLink="/files" routerLinkActive="active"><span class="material-icons">folder</span> Files</a></li>
-        <li><a routerLink="/settings" routerLinkActive="active"><span class="material-icons">settings</span> Settings</a></li>
+        <li><a routerLink="/admin" routerLinkActive="active"><span class="material-icons">folder</span>Upload Files</a></li>
       </ul>
     </nav>
   </aside>
