--- a/src/app/pages/admin/admin.html
+++ b/src/app/pages/admin/admin.html
@@ -1,4 +1,4 @@
-<h2>Admin - Upload Files</h2>
+<!-- <h2>Admin - Upload Files</h2>
 <input type="file" (change)="onFileSelected($event)" />
 
 <div class="card-container">
@@ -8,4 +8,20 @@
     <p *ngIf="!file.url.startsWith('data:image')">Preview not available</p>
     <button (click)="viewFile(file.url)">View</button>
   </div>
+</div> -->
+
+
+<h2>Admin - Upload Files</h2>
+
+<label for="file-upload" class="upload-btn">📂 Select File</label>
+<input id="file-upload" type="file" (change)="onFileSelected($event)" />
+
+<div class="card-container">
+  <div class="file-card" *ngFor="let file of uploadedFiles">
+    <h4>{{ file.name }}</h4>
+    <img *ngIf="file.url.startsWith('data:image')" [src]="file.url" alt="Preview" />
+    <p *ngIf="!file.url.startsWith('data:image')">Preview not available</p>
+    <button (click)="viewFile(file.url)">View</button>
+  </div>
 </div>
+
