--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -5,7 +5,7 @@
 
   <div class="card" >
     <div class="card-body">
-      <h2 class="card-title ">Login</h2>
+      <h2 class="card-title ">Login.</h2>
 
       <div >
         <label class="form-label">Username</label>
