--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -19,7 +19,7 @@
     </ng-container>
     <ng-template #moonIcon>
       <!-- 🌙 Moon -->
-      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#000000" viewBox="0 0 24 24">
+      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#FDB813" viewBox="0 0 24 24">
         <path d="M21 12.79A9 9 0 0 1 11.21 3 7 7 0 1 0 21 12.79z"/>
       </svg>
     </ng-template>
