--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -28,8 +28,7 @@
 
 
 <div class="logo">
-  <img src="assets/logo.png" alt="logo">
-
+ <a href="/"> <img src="assets/logo.png" alt="logo"></a>
 </div>
 
   <div class="card" >
